@@ -1,15 +1,4 @@
-FROM alpine:3.21
-
-RUN apk update \
-  && apk upgrade \
-  && apk add --no-cache openjdk21-jdk \
-  && rm -rf /var/cache/apk/*
-
-ENV TZ=Asia/Shanghai
-RUN ln -snf /usr/share/zoneinfo/${TZ} /etc/localtime && echo ${TZ} > /etc/timezone
-
-ENV SPRING_PROFILES_ACTIVE=prod
-ENV JAVA_OPTS="-XX:+UseZGC -XX:+ZGenerational --spring.profiles.active=${SPRING_PROFILES_ACTIVE}"
+FROM ray2/jdk:latest
 
 ENV NAME="./target/scheduler-0.0.1.jar"
 ENV SERVER_PORT=9000
